[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dummy-logo-tests"
version = "0.0.1"
authors = [
  { name="Ravi Kumar Pilla" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]
